--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
     <h1>RIyad Hossain</h1>
+    <h2>RIyad KaZi RiZu</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni quis consectetur dolorem quia voluptates similique iste fugit voluptatem error odio.</p>
 </body>
 </html>
